fix: remove horizontal shift on error list hover
Removed transform: translateX(2px) from hover state which was causing
error list items to overflow when hovered

--- a/src/components/error_list.scss
+++ b/src/components/error_list.scss
@@ -92,7 +92,6 @@
                         &:hover {
                             background-color: rgba(255, 200, 0, 0.1);
                             border-color: rgba(255, 200, 0, 0.3);
-                            transform: translateX(2px);
                         }
                     }
 
